Image distortion issue fix

--- a/client/app/customer/customer.css
+++ b/client/app/customer/customer.css
@@ -299,108 +299,136 @@ span.user-drop-down:hover{
   color: lightgrey;
   letter-spacing: 1px;
 }
-@keyframes customer-header-animation {
 
 
-    0% {
-        opacity: 0.0;
-        filter: alpha(opacity=0);
-        background-color: transparent !important;
-
-       }
-    10% {
-        opacity: 0.1;
-        filter: alpha(opacity=10);
-       }
-    20% {
-        opacity: 0.2;
-        filter: alpha(opacity=20);
-       }
-    30% {
-        opacity: 0.3;
-        filter: alpha(opacity=30);
-       }
-    40% {
-        opacity: 0.4;
-        filter: alpha(opacity=40);
-       }
-    50% {
-        opacity: 0.5;
-        filter: alpha(opacity=50);
-       }
-    60% {
-        opacity: 0.6;
-        filter: alpha(opacity=60);
-       }
-    70% {
-        opacity: 0.7;
-        filter: alpha(opacity=70);
-       }
-    80% {
-        opacity: 0.8;
-        filter: alpha(opacity=80);
-       }
-    90% {
-        opacity: 0.9;
-        filter: alpha(opacity=90);
-       }
-    100% {
-        opacity: 1;
-        filter: alpha(opacity=100);
-        background-color: transparent !important;
-
-       }
-
-}
+/* Chrome, Safari, Opera */
 @-webkit-keyframes customer-header-animation {
-
   0% {
       opacity: 0.0;
       filter: alpha(opacity=0);
-      background-color: transparent !important;
      }
   10% {
+      opacity: 0.0;
+      filter: alpha(opacity=00);
+     }
+  20% {
       opacity: 0.1;
       filter: alpha(opacity=10);
      }
-  20% {
+  30% {
       opacity: 0.2;
       filter: alpha(opacity=20);
      }
-  30% {
+  40% {
       opacity: 0.3;
       filter: alpha(opacity=30);
      }
-  40% {
+  50% {
       opacity: 0.4;
       filter: alpha(opacity=40);
      }
-  50% {
+  60% {
       opacity: 0.5;
       filter: alpha(opacity=50);
      }
-  60% {
+  70% {
       opacity: 0.6;
       filter: alpha(opacity=60);
      }
-  70% {
+  80% {
       opacity: 0.7;
       filter: alpha(opacity=70);
      }
-  80% {
+  90% {
       opacity: 0.8;
       filter: alpha(opacity=80);
-     }
-  90% {
-      opacity: 0.9;
-      filter: alpha(opacity=90);
      }
   100% {
       opacity: 1;
       filter: alpha(opacity=100);
-      background-color: transparent !important;
-
      }
+
+}
+
+/* Standard syntax */
+@keyframes customer-header-animation {
+  /*0% {
+      background: rgba(255,255,255,0) !important;
+     }
+  10% {
+      background: rgba(255,255,255,0.085) !important;
+     }
+  20% {
+      background: rgba(255,255,255,0.17) !important;
+     }
+  30% {
+      background: rgba(255,255,255,0.255) !important;
+     }
+  40% {
+      background: rgba(255,255,255,0.34) !important;
+     }
+  50% {
+      background: rgba(255,255,255,0.425) !important;
+     }
+  60% {
+      background: rgba(255,255,255,0.51) !important;
+     }
+  70% {
+      background: rgba(255,255,255,0.595) !important;
+     }
+  80% {
+      background: rgba(255,255,255,0.68) !important;
+     }
+  90% {
+      background: rgba(255,255,255,0.765) !important;
+     }
+  100% {
+      background: rgba(255,255,255,0.85) !important;
+     }*/
+     0% {
+         opacity: 0.0;
+         filter: alpha(opacity=0);
+        }
+     10% {
+         opacity: 0.0;
+         filter: alpha(opacity=00);
+        }
+     20% {
+         opacity: 0.1;
+         filter: alpha(opacity=10);
+        }
+     30% {
+         opacity: 0.2;
+         filter: alpha(opacity=20);
+        }
+     40% {
+         opacity: 0.3;
+         filter: alpha(opacity=30);
+        }
+     50% {
+         opacity: 0.4;
+         filter: alpha(opacity=40);
+        }
+     60% {
+         opacity: 0.5;
+         filter: alpha(opacity=50);
+        }
+     70% {
+         opacity: 0.6;
+         filter: alpha(opacity=60);
+        }
+     80% {
+         opacity: 0.7;
+         filter: alpha(opacity=70);
+        }
+     90% {
+         opacity: 0.8;
+         filter: alpha(opacity=80);
+        }
+     100% {
+         opacity: 1;
+         filter: alpha(opacity=100);
+        }
 
 }
 
@@ -415,8 +443,14 @@ span.user-drop-down:hover{
   background-color: white !important;
   opacity: 1;
 }
-.changed-customer-home-header-color{
+/*.changed-customer-home-header-color{
   background: rgba(255,255,255,0.85) !important;
+}*/
+.customer-main-nav-header.changed-customer-home-header-color{
+  background: rgba(255,255,255,0.85) !important;
+  animation-name: customer-header-animation;
+	animation-duration: 2000ms;
+	animation-timing-function: linear;
 }
 
 body{
@@ -496,26 +530,25 @@ body{
   transform: scale(1);
 }
 .productImage, .new-product-image{
-  position: relative;
+  /*position: relative;*/
   overflow: hidden;
+
 }
 .new-product-image.zoomable-taxonomy img{
-  /*height: 100%;
-  width: 100%;*/
-/*-webkit-transition: all 1s ease;
--moz-transition: all 1s ease;
--o-transition: all 1s ease;
--ms-transition: all 1s ease;
-transition: all 1s ease;*/
+ width: 600px;
+ height: auto;
+ /*height: 100%;
+ width: auto*/
+
+-webkit-transition: all 2s ease;
+-moz-transition: all 2s ease;
+-o-transition: all 2s ease;
+-ms-transition: all 2s ease;
+transition: all 2s ease;
   /*-moz-transition: all 0.5s;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   transform: scale(0.7);*/
-
-  -webkit-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out;
 }
 /*.product-image-transparent{
   opacity: 0.5;
@@ -523,9 +556,15 @@ transition: all 1s ease;*/
 .new-product-image.zoomable-taxonomy img:hover {
   /*height: 225%;
   width: 225%;*/
+  /*width: 100%;*/
+  width: 900px;
+  height: auto;
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -o-transition: all 2s ease;
+  -ms-transition: all 2s ease;
+  transition: all 2s ease;
 
-  /*width: 200%;
-  height: auto;*/
 
   /*transform: scale(1.01, 1.01);*/
   /*-moz-transform: scale(1);
